--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
-  "name": "stockx-api",
+ "name": "stockx-api",
   "version": "1.1.0",
   "description": "communicate with the unofficial StockX API",
   "main": "index.js",
   "scripts": {
-    "test": "mocha --timeout 50000"
+    "test": "mocha --timeout 50000",
+    "start": "node index.js" 
   },
   "author": "Matthew Mulfinger",
   "license": "MIT",
